static/css/styles.css
/* Global Styles {{{1 */

body {
	color: #333;
	background: #fff;
	font: normal 75% 'Trebuchet MS',Verdana,Helvetica,sans-serif;
	line-height: 1.6;
}

a { color: #00f; text-decoration: none; }
a:focus, a:hover { color: #f00; text-decoration: underline; }

h1 { text-shadow: 2px 2px 2px #ccc; }

td,th {
	padding: 0 0.5em;
}

small { font-size: 80% }

.left { float:left; }
.right { float:right; }
.text-center { text-align:center; }

.hidden { display:none; }


/* Body Container {{{1 */

#body-container {
	margin: 0 auto;
	padding: 0;
	width: 756px;
}

/* Navigation {{{1 */

nav {
	float:left;
	width:100%;
	background:#DAE0D2 url("banner2.jpg") repeat-x bottom;
	line-height:normal;
}

nav ul {
	margin:0;
	padding:66px 10px 0;
	list-style:none;
}

nav li {
	float:left;
	background:url("left.gif") no-repeat left top;
	margin:0;
	padding:0 0 0 9px;
}

nav a, nav strong, nav span {
	display:block;
	background:url("right.gif") no-repeat right top;
	padding:5px 15px 4px 6px;
	text-decoration:none;
	color:#666;
}
nav a:hover {
	color:#333;
}

nav .current {
	background-image:url("left_on.gif");
}

nav .current a {
	background-image:url("right_on.gif");
	padding-bottom:5px;
	color:#000;
}

nav li.notab, nav li.notab a, nav li.notab span {
	background:none !important;
	color: #000;
}
nav li.notab a {
	color: #00f; text-decoration: none;
}
nav li.notab a:focus, nav li.notab a:hover {
	color: #f00; text-decoration: underline;
}


/* Content {{{1 */

#content {
	clear: both;
}

/* Section {{{1 */

#content section {
	margin-bottom: 2em;
}

#content section h1 {
	font-size: 1.3em;
	text-shadow: 1px 1px 1px #ccc;
}

/* Messages and Errors {{{1 */

#errors li, #messages li, #success li {
	/*margin: 0 1.5em;*/
	list-style-type:none;
}
#errors, #messages, #success {
	clear: both;
	padding:.5em !important;
	margin-bottom:1em;
	border:2px solid #ddd;
	font-size: 1.3em;
	font-weight:bold;
	text-shadow: 1px 1px 1px #000;
}
#messages {
	text-shadow: 1px 1px 1px #ccc !important;
}
#errors {background:#f62626; color:#fff; border-color:#bd0e0e;}
#messages {background:#fffcc4; border-color:#f5d34e;}
#success {background:#3aa33a; color:#fff; border-color:#507d50;}

/* Day navigation {{{1 */
#day-navigation {
	float: left;
	width: 100%;
	margin-top: 1em !important;
}

#day-navigation #location {
	float:left;
	width: 60%;
	text-align:center;
}

#day-navigation #previousday {
	float: left;
	width: 20%;
	line-height: 3em;
}

#day-navigation #nextday {
	float: left;
	width: 20%;
	text-align:right;
	line-height: 3em;
}

#id_datepicker {
	width: 0px;
	padding: 0px;
	border: none;
}
.ui-datepicker-trigger {
	border: none;
	font: normal 0.8em 'Trebuchet MS',Verdana,Helvetica,sans-serif;
	background-color: #fff;
	color: #00f;
	cursor: pointer;
}

#id_changelocation {
	position: absolute;
	background-color: #fff;
	border: 1px solid #aaaaaa;
	padding: 1em;
}

/* Listing of tasks {{{1 */

section.listing {
	clear: both;
}

section.listing header {
	line-height: 1.3em;
	margin-bottom: 1em !important;
}

section.listing table {
	clear: both;
	width: 100%;
}

section.listing .task-name {
	line-height: 1.0em;
	padding-top: 0.4em;
}
section.listing .task-tags {
	color: #080;
	font-style: italic;
	line-height: 1.0em;
	padding-bottom: 0.4em;
}

section.listing span.edit {
	padding-left: 1em;
}

section.listing td { vertical-align:middle; }
section.listing tfoot th { text-align:center; }
section.listing tfoot th:first-child { text-align:left !important; }

.highlight { background-color: #faffc5 !important; }

/* Add new record {{{1 */

section.add-task {
	clear:both;
	float: left;
	margin-top: 1em !important;
	width: 100%;
}
.add-task input {
	padding: 4px;
	margin: 2px 4px;
	background-color: #fff;
	border: 1px solid #8dbdd8;
}

.add-task input.focused {
	font-style:normal;
	color:#000;
}
.add-task input.idle {
	font-style:italic;
	color:#6f6f6f;
}

.add-task #id_task {
	width: 203px;
}
.add-task #id_estimations {
	width: 96px;
}
.add-task #id_real {
	width: 48px;
}
.add-task #id_tags {
	width: 383px;
}
.add-task #id_submit {
	margin-left: 4px;
}

.add-task div.help-toggle {
	margin: 0.5em 4px;
}

.add-task div.help p {
	margin: 0 0 1em 4px;
}


/* Login form {{{1 */

#login-form {
	float: right;
	width: 370px;
}
#login-form div {
	clear: left;
	display: block;
	zoom: 1;
	margin: 5px 0 0 0;
	padding: 1px 3px;
}
#login-form label {
	display: block;
	float: left;
	font-weight: bold;
	width: 100px;
	padding: 4px 5px;
	margin: 1px 0;
	text-align: right;
}
#login-form input {
	padding: 4px;
	margin: 2px 4px;
	background-color: #fff;
	border: 1px solid #fff;
	width: 200px;
}
#login-form button { margin-left: 114px; }
#login-form p { margin-left: 114px; line-height: 1.3em; }
#login-form #errors {
	width: 330px !important;
	margin: 0 auto;
}

#login section {
	margin: 0 0 0 0 !important;
	padding: 1em;
}
#login h1 {
	font-size: 2.8em !important;
	margin-bottom: 0.6em;
	line-height: 1.0em;
	text-shadow: 1px 1px 1px #fff !important;
}
#login h2 {
	font-size: 2em !important;
	margin-bottom: 0.4em;
	line-height: 1.0em;
	text-shadow: 1px 1px 1px #fff !important;
}
#login p { margin-bottom: 0.6em; font-size: 1.3em; line-height: 1.2em; }
#login blockquote { font-style:italic; }

/*http://www.colourlovers.com/palette/92095/Giant_Goldfish*/
#login-form { color: #fff; }
#login-form a { color:#fff; text-decoration:underline; }
#login-text1 { color: #000; background-color: #69d2e7; }
#login-text2 { color: #222; background-color: #a7dbd8; }
#login-text3 { color: #333; background-color: #e0e4cc; }
#login-text4 { color: #fff; background-color: #f38630; }
#login-text5 { color: #fff; background-color: #fa6900; }
#login-text4 a, #login-text5 a { color: #fff; text-decoration:underline; }

#login-text4 h1 { text-shadow: 1px 1px 1px #000 !important; }

/* Register a new account {{{1 */

#register, #register-terms { width: 500px; margin: 2em auto; }
#register div {
	clear: left;
	display: block;
	zoom: 1;
	margin: 5px 0 0 0;
	padding: 1px 3px;
}
#register label {
	display: block;
	float: left;
	font-weight: bold;
	width: 140px;
	padding: 4px 5px;
	margin: 1px 0;
	text-align: right;
}
#register input {
	padding: 4px;
	margin: 2px 4px;
	background-color: #fff;
	border: 1px solid #8dbdd8;
	width: 200px;
}
#register button, #register p { margin-left: 154px; }
#register p { font-size: 90%; }
#register a { margin-left: 2em; }
#register h1 { font-size: 2em !important; margin-bottom: 1em; }
#register #errors {
	width: 400px !important;
	margin: 0 auto;
}

#register-terms li {
	margin-left: 3em;
	/*width: 60%;*/
}

#register-terms ul { margin-bottom: 1.5em; }


/* Account settings {{{1 */

#account-settings,
#account-change-password {
	clear:both;
	float: left;
	margin-top: 1em !important;
	width: 100%;
}
#account-settings label,
#account-change-password label {
	display: block;
	float: left;
	font-weight: bold;
	width: 9em;
	padding: 4px 0px;
	margin: 1px 0;
}
#account-settings em {
	display:block;
	margin-left: 9em;
	margin-bottom: 0.5em;
	width: 400px;
	color: #666;
}
#account-settings input,
#account-change-password input {
	padding: 4px;
	margin: 2px 0px;
	background-color: #fff;
	border: 1px solid #8dbdd8;
	width: 200px;
}
#account-settings button,
#account-change-password button {
	margin: 2px 0px;
	margin-left: 9em;
}
#account-settings div,
#account-change-password div {
	clear: both;
}


/* Reports {{{1 */

#reports {
	clear: both;
	float: left;
	margin-top: 1em !important;
}

/* Community {{{1 */

#community-board-selection {
	clear:both;
	padding: 1em 5px;
	background-color: #e6eeee;
	border-bottom: 1px solid #666;
	width: 746px;
}

/* The list of topics in a board */
#community-topics div.title h1 {
	float: left;
	margin-bottom: 1em;
}
#community-topics div.title a {
	float: left;
	line-height: 2em;
	margin-left: 2em;
}

#community-topics div.topic {
	clear: both;
	margin-top: 1em;
}
#community-topics div.topic em {
	margin-left: 2em;
}

/* For a single topic and the messages within it */
#community-topic {
	width: 600px;
}
#community-topic div.message {
	margin-top: 1em;
}
#community-topic div.signature {
	text-align: right;
	font-style: italic;
}
#community-topic-reply textarea {
	padding: 4px;
	margin: 2px 0px;
	background-color: #fff;
	border: 1px solid #8dbdd8;
	width: 500px;
	font: normal 1em 'Trebuchet MS',Verdana,Helvetica,sans-serif;
}
#community-topic-reply div.submit {
	width: 510px;
	text-align: right;
}

/* For posting a new topic */
#community-new-topic h1 {
	margin-bottom: 1em;
}
#community-new-topic textarea {
	padding: 4px;
	margin: 2px 0px;
	background-color: #fff;
	border: 1px solid #8dbdd8;
	width: 500px;
	font: normal 1em 'Trebuchet MS',Verdana,Helvetica,sans-serif;
}
#community-new-topic input {
	padding: 4px;
	margin: 2px 0px;
	background-color: #fff;
	border: 1px solid #8dbdd8;
	width: 500px;
}
#community-new-topic label {
	display: block;
	float: left;
	width: 7em;
	padding: 4px 0px;
	margin: 1px 0;
}
#community-new-topic button {
	margin: 2px 0px;
	margin-left: 7em;
}
#community-new-topic div {
	clear: both;
}

/* Updates, About and Credits pages {{{1 */

#updates, #about, #credits {
	clear: both;
	float: left;
	margin-top: 1em !important;
}

#updates h1, #about h1, #credits h1 { margin-bottom: 0.8em; }
#updates p { margin-bottom: 2em; color: #666; }
#about p   { margin-bottom: 1.5em; width: 60%; }
#credits p { margin-bottom: 1.5em; }

#updates div.updates { margin-bottom: 2em;}
#updates div.updates li, #about li {
	margin-left: 3em;
	width: 60%;
}

#about ul { margin-bottom: 1.5em; }


#credits {
	width: 500px;
}
#credits-logos {
	float: left;
	width: 250px;
	margin-top: 3em !important;
	text-align: center;
}


/* Footer {{{1 */

footer {
	clear: both;
	text-align: center;
	padding: 2em 0;
}
footer, footer a {
	color: #aaa;
}



/* vim: set sw=4 ts=4 noet foldmethod=marker: */

